module15Advanced/k8s/config-server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: config-server
  template:
    metadata:
      labels:
        app: config-server
    spec:
      containers:
        - name: config-server
          image: config-server:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8888
