module15Advanced/k8s/eureka-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: eureka-server
spec:
  serviceName: eureka-headless-service
  replicas: 2
  selector:
    matchLabels:
      app: eureka-headless-service
  template:
    metadata:
      labels:
        app: eureka-headless-service
    spec:
      containers:
        - name: eureka-headless-service
          image: eureka-server:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8761
