module15Advanced/k8s/notificaiton-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
        - name: notification-service
          image: my-notification:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8082
