module15Advanced/k8s/eureka-dashboard.yml
apiVersion: v1
kind: Service
metadata:
  name: eureka-dashboard
spec:
  type: NodePort
  selector:
    app: eureka-headless-service
  ports:
    - port: 8761
      targetPort: 8761
      nodePort: 30100
