module15Advanced/k8s/eureka-headless-service.yml
apiVersion: v1
kind: Service
metadata:
  name: eureka-headless-service
spec:
  clusterIP: None
  selector:
    app: eureka-headless-service
  ports:
    - port: 8761
      targetPort: 8761
