module15Advanced/k8s/kafka-service.yml
apiVersion: v1
kind: Service
metadata:
  name: kafka
  labels:
    app: kafka
spec:
  selector:
    app: kafka
  ports:
    - name: kafka-client
      port: 9092
      targetPort: 9092
    - name: kafka-controller
      port: 9093
      targetPort: 9093
  type: ClusterIP
